crates/atlas-runtime/tests/errors/unexpected_char.atl
// Test: Unexpected characters (AT1001)
let x = 5 @ 3;
let y = $100;
let z = #tag;
